[gd_scene load_steps=8 format=2]

[ext_resource path="res://ships/nix/door-small.gd" type="Script" id=1]
[ext_resource path="res://ships/nix/door-small.glb" type="PackedScene" id=2]
[ext_resource path="res://ships/nix/434161__mickthemicguy__space-door-slide-close.wav" type="AudioStream" id=3]
[ext_resource path="res://ships/nix/434162__mickthemicguy__space-ship-door-open.wav" type="AudioStream" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.12, 2.172, 1.5 )

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -2, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("door:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( -2, 0, 0 ) ]
}

[node name="door-small" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="static_collision" parent="door" index="0"]
collision_layer = 4
collision_mask = 3

[node name="AreaParent" type="Area" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AreaParent" index="0"]
shape = SubResource( 1 )

[node name="AreaChild" type="Area" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AreaChild" index="0"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
method_call_mode = 1
anims/close = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="AudioOpen" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource( 4 )

[node name="AudioClose" type="AudioStreamPlayer3D" parent="." index="5"]
stream = ExtResource( 3 )
bus = "SFX"
[connection signal="body_entered" from="AreaParent" to="." method="_on_body_entered" binds= [ true ]]
[connection signal="body_exited" from="AreaParent" to="." method="_on_body_exited" binds= [ true ]]
[connection signal="body_entered" from="AreaChild" to="." method="_on_body_entered" binds= [ false ]]
[connection signal="body_exited" from="AreaChild" to="." method="_on_body_exited" binds= [ false ]]
